--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,5 +2,8 @@
 name = "vellum"
 version = "0.1.0"
 edition = "2024"
+description = "Records the history of commands run"
 
 [dependencies]
+clap = { version = "4.5.35", features = ["derive", "unicode", "wrap_help"] }
+clap-cargo = "0.15.2"
