--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ description = "Records the history of commands run"
 clap = { version = "4.5.35", features = ["derive", "unicode", "wrap_help"] }
 clap-cargo = "0.15.2"
 env_logger = "0.11.8"
+fork = "0.2.0"
 log = { version = "0.4.27", features = ["std", "serde"] }
 serde = { version = "1.0.219", features = ["derive"] }
 toml = "0.8.20"
+xdg = { version = "2.5.2", features = ["serde"] }
