--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,6 @@ env_logger = "0.11.8"
 fork = "0.2.0"
 log = { version = "0.4.27", features = ["std", "serde"] }
 serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.140"
 toml = "0.8.20"
 xdg = { version = "2.5.2", features = ["serde"] }
