--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ clap = { version = "4.5.35", features = ["derive", "unicode", "wrap_help"] }
 clap-cargo = "0.15.2"
 env_logger = "0.11.8"
 fork = "0.2.0"
+hostname = "0.4.1"
 log = { version = "0.4.27", features = ["std", "serde"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
