Start working on the shell integration side
Start working on the mechanisms to integrate the tool into the shell.

We are going to take the fairly standard route of using `eval "$(vellum
init <shell>)"` as the method. So we are going to embed the necessary
setup scripts into the binary.

Starting with zsh because the integration is a lot easier there, since
the hooks that we need to connect things up are already there as
standard.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ env_logger = "0.11.8"
 fork = "0.2.0"
 git2 = { version = "0.20.1", features = ["vendored-libgit2", "vendored-openssl"] }
 hostname = "0.4.1"
+include_dir = "0.7.4"
 log = { version = "0.4.27", features = ["std", "serde"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
