--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 description = "Records the history of commands run"
 
 [dependencies]
+aws-lc-rs = "1.13.0"
 chrono = { version = "0.4.40", features = ["serde"] }
 clap = { version = "4.5.35", features = ["derive", "unicode", "wrap_help"] }
 clap-cargo = "0.15.2"
@@ -14,6 +15,7 @@ git2 = { version = "0.20.1", features = ["vendored-libgit2", "vendored-openssl"]
 hostname = "0.4.1"
 include_dir = "0.7.4"
 log = { version = "0.4.27", features = ["std", "serde"] }
+rmp-serde = "1.3.0"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 toml = "0.8.20"
