--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,12 +14,14 @@ env_logger = "0.11.8"
 fork = "0.2.0"
 git2 = { version = "0.20.1", features = ["vendored-libgit2", "vendored-openssl"] }
 hostname = "0.4.1"
+humantime-serde = "1.1.1"
 include_dir = "0.7.4"
 itertools = "0.14.0"
 log = { version = "0.4.27", features = ["std", "serde"] }
 rmp-serde = "1.3.0"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
+ticker = "0.1.1"
 toml = "0.8.20"
 uuid = { version = "1.16.0", features = ["serde", "v7"] }
 xdg = { version = "2.5.2", features = ["serde"] }
