--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ chrono = { version = "0.4.40", features = ["serde"] }
 clap = { version = "4.5.35", features = ["derive", "unicode", "wrap_help"] }
 clap-cargo = "0.15.2"
 env_logger = "0.11.8"
+fd-lock = "4.0.4"
 fork = "0.2.0"
 git2 = { version = "0.20.1", features = ["vendored-libgit2", "vendored-openssl"] }
 hostname = "0.4.1"
@@ -21,6 +22,7 @@ log = { version = "0.4.27", features = ["std", "serde"] }
 rmp-serde = "1.3.0"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
+sysinfo = { version = "0.34.2", default-features = false, features = ["system"] }
 ticker = "0.1.1"
 toml = "0.8.20"
 uuid = { version = "1.16.0", features = ["serde", "v7"] }
