--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ log = { version = "0.4.27", features = ["std", "serde"] }
 rmp-serde = "1.3.0"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
+signal-hook = "0.3.17"
 sysinfo = { version = "0.34.2", default-features = false, features = ["system"] }
 ticker = "0.1.1"
 toml = "0.8.20"
