Move syncer out of History
By having the Syncer owned by History we had to lock the History for the
entire duration of the sync. Since the bulk of the time is spent
interacting with git, and that takes hundreds of milliseconds to
seconds, this can cause client calls to stall for a noticable amount of
time. So we move the Syncer out in the Server, so that we can lock the
Syncer separately, and only lock the History for the time taken to
actually do the History sync work, which is much faster.

This should hopefully resolve the issue with the clients getting blocked
whilst the server talks to git.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ description = "Records the history of commands run"
 aws-lc-rs = "1.13.0"
 base64 = "0.22.1"
 chrono = { version = "0.4.40", features = ["serde"] }
-clap = { version = "4.5.35", features = ["derive", "unicode", "wrap_help"] }
+clap = { version = "4.5.35", features = ["cargo", "derive", "unicode", "wrap_help"] }
 clap-cargo = "0.15.2"
 env_logger = "0.11.8"
 fd-lock = "4.0.4"
