--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ fd-lock = "4.0.4"
 fork = "0.2.0"
 git2 = { version = "0.20.1", features = ["vendored-libgit2", "vendored-openssl"] }
 hostname = "0.4.1"
+humantime = "2.2.0"
 humantime-serde = "1.1.1"
 include_dir = "0.7.4"
 itertools = "0.14.0"
