--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 signal-hook = "0.3.17"
 sysinfo = { version = "0.34.2", default-features = false, features = ["system"] }
+tempfile = "3.19.1"
 ticker = "0.1.1"
 toml = "0.8.20"
 uuid = { version = "1.16.0", features = ["serde", "v7"] }
