--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ humantime-serde = "1.1.1"
 include_dir = "0.7.4"
 itertools = "0.14.0"
 log = { version = "0.4.27", features = ["std", "serde"] }
+rand = { version = "0.9.1", features = ["serde"] }
 rmp-serde = "1.3.0"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
