--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ base64 = "0.22.1"
 chrono = { version = "0.4.40", features = ["serde"] }
 clap = { version = "4.5.35", features = ["cargo", "derive", "unicode", "wrap_help"] }
 clap-cargo = "0.15.2"
+clap_complete = "4.5.48"
 env_logger = "0.11.8"
 fd-lock = "4.0.4"
 fork = "0.2.0"
