--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,10 @@ chrono = { version = "0.4.40", features = ["serde"] }
 clap = { version = "4.5.35", features = ["cargo", "derive", "unicode", "wrap_help"] }
 clap-cargo = "0.15.2"
 clap_complete = "4.5.48"
+clap_mangen = "0.2.26"
 env_logger = "0.11.8"
 fd-lock = "4.0.4"
+flate2 = "1.1.1"
 fork = "0.2.0"
 git2 = { version = "0.20.1", features = ["vendored-libgit2", "vendored-openssl"] }
 hostname = "0.4.1"
