Update the help to match packages
The packages are using a different description of the tool. Update the
help text to match.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "vellum"
 version = "0.5.2"
 edition = "2024"
-description = "Records the history of commands run"
+description = "sync shell history using git"
 
 [dependencies]
 aws-lc-rs = "1.13.0"
