Using serde_bytes may improve encoding
Apparently this may result in a more efficient encoding of bytes vs not
using it.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,3 +34,4 @@ toml = "0.8.20"
 uuid = { version = "1.16.0", features = ["serde", "v7"] }
 which = "7.0.3"
 xdg = { version = "2.5.2", features = ["serde"] }
+serde_bytes = "0.11"
